webpy funzionante, e permette di ricercare direttamente dalla pagina /

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,12 +3,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="colorlib.com">
-    <link href="colorlib-search-6_files/css.css" rel="stylesheet">
-    <link href="colorlib-search-6_files/main.css" rel="stylesheet">
+    <link href="static/css.css" rel="stylesheet">
+    <link href="static/main.css" rel="stylesheet">
 </head>
   <body>
     <div class="s006">
-      <form>
+      <form action="search" method="GET">
         <fieldset>
           <legend>What are you looking for?</legend>
 
@@ -19,28 +19,19 @@
                   <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
               </button>
-              <input id="search" type="text" placeholder="" value="Ladies">
+              <input id="search" name="query" type="text" placeholder="" value="keyword">
             </div>
           </div>
           <div class="suggestion-wrap">
-            <span>New Arrivals</span>
-            <span>Ladies</span>
-            <span>Mens</span>
-            <span>Accessories</span>
-            <span>Sale</span>
+            <span>keyword1</span>
+            <span>keyword2</span>
+            <span>keyword3</span>
+            <span>keyword4</span>
+            <span>keyword4</span>
           </div>
         </fieldset>
       </form>
     </div>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script type="text/javascript" async="" src="colorlib-search-6_files/analytics.js"></script><script async="" src="colorlib-search-6_files/js" type="text/javascript"></script>
-<script type="text/javascript">
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-23581568-13');
-</script>
 
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) --></html>
