--- a/web/static/main.css
+++ b/web/static/main.css
@@ -819,7 +819,7 @@ legend {
   -ms-flex-align: center;
       align-items: center;
   font-family: 'Poppins', sans-serif;
-  background: url("../dna/2328064.jpg");
+  background: url("./dna/2328064.jpg");
   background-size: cover;
   padding: 15px;
 }
@@ -830,7 +830,7 @@ legend {
     width: 100%; height:100%;
     top:0; left:0;
     background:rgba(0,0,0,0.6);
-    opacity: 1;
+    opacity: 0.3;
     transition: all 1s;
     -webkit-transition: all 1s;
     z-index: 0;
