--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -1,12 +1,92 @@
 $def with (results)
+
 <html>
 	<head>
 		<title>Search results</title>
 		<link rel="stylesheet" href="/static/style.css">
 	</head>
-	<body>
+	<div class="container bootstrap snippet">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                    <h2>
+                        160 results found for: <span class="text-navy">"Bootdey"</span>
+                    </h2>
+                    <small>Request time  (0.23 seconds)</small>
+
+                    <div class="search-form">
+                        <form action="#" method="get">
+                            <div class="input-group">
+                                <input type="text" placeholder="Bootdey" name="search" class="form-control input-lg">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-lg btn-primary" type="submit">
+                                        Search
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                    <div class="hr-line-dashed"></div>
+                    <div class="search-result">
+                        <h3><a href="#">Bootdey</a></h3>
+                        <a href="#" class="search-link">www.bootdey.com</a>
+                        <p>
+
+                        </p>
+                    </div>
+
+                    <div class="hr-line-dashed"></div>
+                    <div class="search-result">
+                        <h3><a href="#">Bootdey</a></h3>
+                        <a href="#" class="search-link">https://bootdey.com/</a>
+                        <p>
+                          Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
+                        </p>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+
+                    <div class="search-result">
+                        <h3><a href="#">Bootdey | Facebook</a></h3>
+                        <a href="#" class="search-link">https://www.facebook.com/bootdey</a>
+                        <p>
+                           Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
+                        </p>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+
+                    <div class="search-result">
+                        <h3><a href="#">Bootdey | Twitter</a></h3>
+                        <a href="#" class="search-link">www.twitter.com/bootdey</a>
+                        <p>
+                            Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
+                        </p>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+
+                    <div class="text-center">
+                        <div class="btn-group">
+                            <button class="btn btn-white" type="button"><i class="glyphicon glyphicon-chevron-left"></i></button>
+                            <button class="btn btn-white">1</button>
+                            <button class="btn btn-white  active">2</button>
+                            <button class="btn btn-white">3</button>
+                            <button class="btn btn-white">4</button>
+                            <button class="btn btn-white">5</button>
+                            <button class="btn btn-white">6</button>
+                            <button class="btn btn-white">7</button>
+                            <button class="btn btn-white" type="button"><i class="glyphicon glyphicon-chevron-right"></i> </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	</div>
+
+	<!-- <body>
 		<h1>Ecco i risultati:</h1>
 		$# i due punti impediscono a templetor di fare escape dell'html
 		$:results
-	</body>
+	</body> -->
 </html>
