--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,11 +1,45 @@
-h2{
-	color: #9B0014;
+
+
+.ibox-content {
+    background-color: #FFFFFF;
+    color: inherit;
+    padding: 15px 20px 20px 20px;
+    border-color: #E7EAEC;
+    border-image: none;
+    border-style: solid solid none;
+    border-width: 1px 0px;
 }
 
-img.logo{
-	width: 20%;
+.search-form {
+    margin-top: 10px;
 }
 
-ol{
-	background-color: red;
+.search-result h3 {
+    margin-bottom: 0;
+    color: #1E0FBE;
 }
+
+.search-result .search-link {
+    color: #006621;
+}
+
+.search-result p {
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.hr-line-dashed {
+    border-top: 1px dashed #E7EAEC;
+    color: #ffffff;
+    background-color: #ffffff;
+    height: 1px;
+    margin: 20px 0;
+}
+
+h2 {
+    font-size: 24px;
+    font-weight: 100;
+}
+
+
+                                    
