--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -31,43 +31,16 @@ $def with (results)
                             </div>
                         </form>
                     </div>
+										$ for article in results:
+											<div class="hr-line-dashed"></div>
+											<div class="search-result">
+													<h3><a href="#">Bootdey</a></h3>
+													<a href="#" class="search-link">https://bootdey.com/</a>
+													<p>
+														Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
+													</p>
+											</div>
 
-                    <div class="hr-line-dashed"></div>
-                    <div class="search-result">
-                        <h3><a href="#">Bootdey</a></h3>
-                        <a href="#" class="search-link">www.bootdey.com</a>
-                        <p>
-
-                        </p>
-                    </div>
-
-                    <div class="hr-line-dashed"></div>
-                    <div class="search-result">
-                        <h3><a href="#">Bootdey</a></h3>
-                        <a href="#" class="search-link">https://bootdey.com/</a>
-                        <p>
-                          Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
-                        </p>
-                    </div>
-                    <div class="hr-line-dashed"></div>
-
-                    <div class="search-result">
-                        <h3><a href="#">Bootdey | Facebook</a></h3>
-                        <a href="#" class="search-link">https://www.facebook.com/bootdey</a>
-                        <p>
-                           Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
-                        </p>
-                    </div>
-                    <div class="hr-line-dashed"></div>
-
-                    <div class="search-result">
-                        <h3><a href="#">Bootdey | Twitter</a></h3>
-                        <a href="#" class="search-link">www.twitter.com/bootdey</a>
-                        <p>
-                            Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers
-                        </p>
-                    </div>
-                    <div class="hr-line-dashed"></div>
 
                     <div class="text-center">
                         <div class="btn-group">
