--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -37,7 +37,7 @@ $def with (results)
 													<h3><a href="#">$print(article)</a></h3>
 													<a href="#" class="search-link">https://bootdey.com/</a>
 													<p>
-															abst											\
+															abst
 													</p>
 											</div>
 
