--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -37,7 +37,7 @@ $def with (results)
 													<h3><a href="#">$article['title']</a></h3>
 													<a href="#" class="search-link">https://aleste.com/$article['docid']</a>
 													<p>
-														$article
+														$article['abstract']
 													</p>
 											</div>
 
