--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -20,9 +20,9 @@ $def with (results, user_data)
                     <small>Request time  (0.23 seconds)</small>
 
                     <div class="search-form">
-                        <form action="#" method="get">
+                        <form action="search" method="get">
                             <div class="input-group">
-                                <input type="text" placeholder="Bootdey" name="search" class="form-control input-lg">
+                                <input type="text" placeholder="$user_data.query" name="query" class="form-control input-lg">
                                 <div class="input-group-btn">
                                     <button class="btn btn-lg btn-primary" type="submit">
                                         Search
