--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -40,7 +40,7 @@ $def with (results, user_data)
 													<h3><a href="#">$article['title']</a></h3>
 													<a href="#" class="search-link">https://aleste.com/$article['docid']</a>
 													<p>
-														$
+														$abstract
 													</p>
 											</div>
 
