--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -38,7 +38,7 @@ $def with (results, user_data)
 													<h3><a href="#">$article['title']</a></h3>
 													<a href="#" class="search-link">https://aleste.com/$article['docid']</a>
 													<p>
-														$str(article.get('abstract'))[:150] + '...' if len(article.get('abstract')) > 150 else article.get('abstract')
+														$article.get("abstract")
 
 													</p>
 											</div>
