--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -20,6 +20,8 @@
                 </svg>
               </button>
               <input id="search" name="query" type="text" placeholder="" value="keyword">
+              <input id="search" name="page" type="hidden" placeholder="" value="1">
+
             </div>
           </div>
           <div class="suggestion-wrap">
