--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -22,7 +22,7 @@ $def with (results, user_data, searcherlen, pages)
 						<form action="search" method="get">
 							<div class="input-group">
 								<input type="hidden" value="1" name="query" class="form-control input-lg">
-								<input type="text" placeholder="$user_data.query" name="query" class="form-control input-lg">
+								<input type="text" placeholder="$user_data.query" name="page" class="form-control input-lg">
 								<div class="input-group-btn">
 									<button class="btn btn-lg btn-primary" type="submit">
 										Search
