--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -21,8 +21,8 @@ $def with (results, user_data, searcherlen, pages)
 					<div class="search-form">
 						<form action="search" method="get">
 							<div class="input-group">
-								<input type="hidden" value="$user_data.query" name="query" class="form-control input-lg">
-								<input type="text" value="1" name="page" class="form-control input-lg">
+								<input type="text" value="$user_data.query" name="query" class="form-control input-lg">
+								<input type="hidden" value="1" name="page" class="form-control input-lg">
 								<div class="input-group-btn">
 									<button class="btn btn-lg btn-primary" type="submit">
 										Search
