--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -35,7 +35,7 @@ $def with (results, user_data, searcherlen, pages)
 						<div class="hr-line-dashed"></div>
 						<div class="search-result">
 							<h3><a href="#">$article['title']</a></h3>
-							<a href="#" class="search-link">https://aleste.com/$article['docid']</a>
+							<a href="https://aleste.com/$article['docid']" class="search-link">https://aleste.com/$article['docid']</a>
 							<p>
 								$article.get("abstract")
 
