--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -37,6 +37,10 @@ h1 {
   margin: 0.67em 0;
 }
 
+.current_page {
+  background: #f0f0f0;
+}
+
 /* Grouping content
    ========================================================================== */
 /**
