--- a/web/templates/searchResults.html
+++ b/web/templates/searchResults.html
@@ -1,5 +1,4 @@
 $def with (results, user_data, searcherlen, pages)
-
 <div class="container bootstrap snippet">
 	<div class="row">
 		<div class="col-lg-12">
@@ -26,8 +25,8 @@ $def with (results, user_data, searcherlen, pages)
 					$for article in results:
 						<div class="hr-line-dashed"></div>
 						<div class="search-result">
-							<h3><a href="#">$article['title']</a></h3>
-							<a href="https://aleste.com/$article['docid']" class="search-link">https://aleste.com/$article['docid']</a>
+							<h3><a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=$re.sub(r"([0-9]{4}; )","" ,'"'+article['source']+'"').replace(" ",'"+"').replace(":",'"+"')">$article['title']</a></h3>
+							<a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=$re.sub(r"([0-9]{4}; )","" ,'"'+article['source']+'"').replace(" ",'"+"').replace(":",'"+"')" class="search-link">https://www.ncbi.nlm.nih.gov/pubmed/?term=$re.sub(r"([0-9]{4}; )","" ,'"'+article['source']+'"').replace(" ",'"+"').replace(":",'"+"')</a>
 							<p>
 								$if "abstract" in article.keys() and len(article.get('abstract')) > 300:
 									$article.get("abstract")[:300] + '...'
