--- a/web/templates/main_layout.html
+++ b/web/templates/main_layout.html
@@ -1,6 +1,6 @@
 $def with (page)
 $var css: static/css/bootstrap.min.css static/css/css.css static/css/main.css /static/css/style.css
-$var js: bootstrap.min.js
+$var js: static/js/bootstrap.min.js
 <html>
     <head>
     <title>Ohsumed Search</title>
@@ -9,11 +9,11 @@ $var js: bootstrap.min.js
     $if self.css:
         $for style in self.css.split():
             <link href="$style" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" async></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" async></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" defer></script>
 	$if self.js:
         $for script in self.js.split():
-            <script src="$script" async></script>
+            <script src="$script" defer></script>
 	
 </head>
 <body>
