--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,7 +15,7 @@
 
             </div>
           </div>
-          <div class="suggestion-wrap">
+          <div class="adv-search">
             <a href="#">Ricerca avanzata</a>
           </div>
         </fieldset>
