--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -1,3 +1,5 @@
+$def with (docid)
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -105,7 +107,7 @@
 
 			</div>
 
-		
+
 
 			<!-- Begin Post Content -->
 			<div class="article-post">
@@ -165,7 +167,7 @@
 <div class="container">
 	<div class="footer">
 		<p class="pull-left">
-			 Copyright &copy; 2017 Your Website Name
+			 Copyright &copy; 2017 Search engine
 		</p>
 		<p class="pull-right">
 			 Mediumish Theme by <a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a>
