web completo (fine!!!)

--- a/Progetto_BD2_consegna/web/templates/index.html
+++ b/Progetto_BD2_consegna/web/templates/index.html
@@ -15,7 +15,8 @@
 
             </div>
           </div>
-          <div class="adv-search">
+          <div style="display:none;" class="adv-search">
+            <!--- PREMIUM FEATURE -->
             <a href="#">Ricerca avanzata</a>
           </div>
         </fieldset>
