--- a/Progetto_BD2_consegna/web/templates/main_layout.html
+++ b/Progetto_BD2_consegna/web/templates/main_layout.html
@@ -9,12 +9,14 @@ $var js: static/js/bootstrap.min.js static/js/popper.min.js
     $if self.css:
         $for style in self.css.split():
             <link href="$style" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" defer></script>
 	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" defer></script>-->
 	$if self.js:
         $for script in self.js.split():
             <script src="$script" defer></script>
-	
+
 </head>
 <body>
     $:page
